[package]
name = "rust-nft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"

log = "0.4.0"
env_logger = "0.9.0"

mongodb = { version = "2.1.0", default-features = false, features = ["sync"] }
bson = "2.1.0"
serde = "1.0.136"
futures = "0.3.19"
